--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ target-version = ['py37', 'py38']
 include = '\.pyi?$'
 
 [tool.pytest.ini_options]
+norecursedirs = "data"
+addopts = "-p no:pytest-ape"  # NOTE: Prevents the ape plugin from activating on our tests
 python_files = "test_*.py"
 testpaths = "tests"
 markers = "fuzzing: Run Hypothesis fuzz test suite"
