--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ include = '\.pyi?$'
 
 [tool.pytest.ini_options]
 norecursedirs = "data"
-addopts = "-p no:pytest-ape"  # NOTE: Prevents the ape plugin from activating on our tests
+addopts = "-p no:ape_test"  # NOTE: Prevents the ape plugin from activating on our tests
 python_files = "test_*.py"
 testpaths = "tests"
 markers = "fuzzing: Run Hypothesis fuzz test suite"
