--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -72,18 +72,18 @@ jobs:
           run: |
             GETH_VERSION=1.10.26
 
-            if [ ! -e geth-versions/geth-$GETH_VERSION/go-ethereum-$GETH_VERSION/build/bin/geth ] ; then
-                which python
-                mkdir -p $HOME/.ethash
-                mkdir -p geth-versions/geth-$GETH_VERSION
-                cd geth-versions/geth-$GETH_VERSION
-                wget -O geth.tar.gz "https://github.com/ethereum/go-ethereum/archive/v$GETH_VERSION.tar.gz"
-                tar -zxvf geth.tar.gz
-                cd go-ethereum-$GETH_VERSION
-                make geth
-                cp geth-$GETH_VERSION/bin/geth $HOME/.local/bin
-                geth makedag 0 $HOME/.ethash
-            fi
+            # if [ ! -e geth-versions/geth-$GETH_VERSION/go-ethereum-$GETH_VERSION/build/bin/geth ] ; then
+            which python
+            mkdir -p $HOME/.ethash
+            mkdir -p geth-versions/geth-$GETH_VERSION
+            cd geth-versions/geth-$GETH_VERSION
+            wget -O geth.tar.gz "https://github.com/ethereum/go-ethereum/archive/v$GETH_VERSION.tar.gz"
+            tar -zxvf geth.tar.gz
+            cd go-ethereum-$GETH_VERSION
+            make geth
+            cp ./build/bin/geth $HOME/.local/bin
+            geth makedag 0 $HOME/.ethash
+            # fi
 
         - name: Install Dependencies
           run: |
