--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,57 +3,13 @@ on: ["push", "pull_request"]
 name: Test
 
 jobs:
-    linting:
-        runs-on: ubuntu-latest
-
-        steps:
-        - uses: actions/checkout@v2
-
-        - name: Setup Python
-          uses: actions/setup-python@v2
-          with:
-              python-version: 3.8
-
-        - name: Install Dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install .[lint]
-
-        - name: Run Black
-          run: black --check .
-
-        - name: Run isort
-          run: isort --check-only .
-
-        - name: Run flake8
-          run: flake8 .
-
-    type-check:
-        runs-on: ubuntu-latest
-
-        steps:
-        - uses: actions/checkout@v2
-
-        - name: Setup Python
-          uses: actions/setup-python@v2
-          with:
-              python-version: 3.8
-
-        - name: Install Dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install .[lint,test]
-
-        - name: Run MyPy
-          run: mypy .
-
     functional:
         runs-on: ${{ matrix.os }}
 
         strategy:
             matrix:
-                os: [ubuntu-latest, macos-latest]   # eventually add `windows-latest`
-                python-version: [3.8, 3.9, "3.10"]
+                os: [ubuntu-latest]   # eventually add `windows-latest`
+                python-version: [3.9]
 
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -73,7 +29,6 @@ jobs:
             GETH_VERSION=1.10.26
 
             # if [ ! -e geth-versions/geth-$GETH_VERSION/go-ethereum-$GETH_VERSION/build/bin/geth ] ; then
-            which python
             mkdir -p $HOME/.ethash
             mkdir -p geth-versions/geth-$GETH_VERSION
             cd geth-versions/geth-$GETH_VERSION
@@ -81,7 +36,9 @@ jobs:
             tar -zxvf geth.tar.gz
             cd go-ethereum-$GETH_VERSION
             make geth
-            cp ./build/bin/geth $HOME/.local/bin
+
+            mkdir -p /opt/hostedtoolcache/geth/$GETH_VERSION/bin/
+            cp ./build/bin/geth $RUNNER_TOOL_CACHE
             geth makedag 0 $HOME/.ethash
             # fi
 
@@ -93,25 +50,3 @@ jobs:
 
         - name: Run Tests
           run: pytest -m "not fuzzing" -s --cov=src -n auto
-
-    fuzzing:
-        runs-on: ubuntu-latest
-
-        strategy:
-            fail-fast: true
-
-        steps:
-        - uses: actions/checkout@v2
-
-        - name: Setup Python
-          uses: actions/setup-python@v2
-          with:
-              python-version: 3.8
-
-        - name: Install Dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install .[test]
-
-        - name: Run Tests
-          run: pytest -m "fuzzing" --no-cov -s
