--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,9 +29,6 @@ jobs:
             GETH_VERSION=1.10.26
             DEST=$RUNNER_TOOL_CACHE/geth/
 
-            echo $PATH
-            exit 69
-
             # if [ ! -e geth-versions/geth-$GETH_VERSION/go-ethereum-$GETH_VERSION/build/bin/geth ] ; then
             mkdir -p $HOME/.ethash
             mkdir -p geth-versions/geth-$GETH_VERSION
@@ -41,7 +38,7 @@ jobs:
             cd go-ethereum-$GETH_VERSION
             make geth
 
-            cp ./build/bin/geth $RUNNER_TOOL_CACHE
+            cp ./build/bin/geth $HOME/.local/bin
             which geth
             geth makedag 0 $HOME/.ethash
             # fi
