--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,7 @@ jobs:
 
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GETH_VERSION: 1.10.26
 
         steps:
         - uses: actions/checkout@v2
@@ -24,9 +25,16 @@ jobs:
           with:
               python-version: ${{ matrix.python-version }}
 
+        - name: Cache Geth
+          id: cache-geth
+          uses: actions/cache@v3
+          with:
+            path: go-ethereum-$GETH_VERSION/build/bin/geth
+            key: ${{ runner.os }}-geth-$GETH_VERSION
+
         - name: Install Geth
+          if: steps.cache-geth.outputs.cache-hit != 'true'
           run: |
-            GETH_VERSION=1.10.26
             mkdir -p $HOME/.ethash
             mkdir -p $HOME/.local/bin
             wget -O geth.tar.gz "https://github.com/ethereum/go-ethereum/archive/v$GETH_VERSION.tar.gz"
