--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,20 +29,18 @@ jobs:
           id: cache-geth
           uses: actions/cache@v3
           with:
-            path: go-ethereum-$GETH_VERSION/build/bin/geth
+            path: $HOME/.local/bin
             key: ${{ runner.os }}-geth-$GETH_VERSION
 
         - name: Install Geth
           if: steps.cache-geth.outputs.cache-hit != 'true'
           run: |
-            mkdir -p $HOME/.ethash
             mkdir -p $HOME/.local/bin
             wget -O geth.tar.gz "https://github.com/ethereum/go-ethereum/archive/v$GETH_VERSION.tar.gz"
             tar -zxvf geth.tar.gz
             cd go-ethereum-$GETH_VERSION
             make geth
             cp ./build/bin/geth $HOME/.local/bin
-            geth makedag 0 $HOME/.ethash
 
         - name: Install Dependencies
           run: |
