--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,6 +36,8 @@ jobs:
           if: steps.cache-geth.outputs.cache-hit != 'true'
           run: |
             mkdir -p $HOME/.local/bin
+            echo $PATH
+            exit 1
             wget -O geth.tar.gz "https://github.com/ethereum/go-ethereum/archive/v$GETH_VERSION.tar.gz"
             tar -zxvf geth.tar.gz
             cd go-ethereum-$GETH_VERSION
