--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,7 @@ jobs:
 
         strategy:
             matrix:
-                os: [macos-latest]   # eventually add `windows-latest`
+                os: [ubuntu-latest, macos-latest]   # eventually add `windows-latest`
                 python-version: [3.9]
 
         env:
@@ -29,20 +29,18 @@ jobs:
           id: cache-geth
           uses: actions/cache@v3
           with:
-            path: $HOME/.local/bin
+            path: /usr/local/bin/geth
             key: ${{ runner.os }}-geth-$GETH_VERSION
 
         - name: Install Geth
           if: steps.cache-geth.outputs.cache-hit != 'true'
           run: |
-            mkdir -p $HOME/.local/bin
-            echo $PATH
-            exit 1
+            mkdir -p /usr/local/bin
             wget -O geth.tar.gz "https://github.com/ethereum/go-ethereum/archive/v$GETH_VERSION.tar.gz"
             tar -zxvf geth.tar.gz
             cd go-ethereum-$GETH_VERSION
             make geth
-            cp ./build/bin/geth $HOME/.local/bin
+            cp ./build/bin/geth /usr/local/bin
             geth version
 
         - name: Install Dependencies
