--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,12 +3,12 @@ on: ["push", "pull_request"]
 name: Test
 
 jobs:
-    functional:
+    tests:
         runs-on: ${{ matrix.os }}
 
         strategy:
             matrix:
-                os: [ubuntu-latest, macos-latest]   # eventually add `windows-latest`
+                os: [macos-latest]   # eventually add `windows-latest`
                 python-version: [3.9]
 
         env:
@@ -50,4 +50,7 @@ jobs:
             pip install .[test]
 
         - name: Run Tests
-          run: pytest -m "not fuzzing" -s --cov=src -n auto
+          run: pytest tests/functional -m "not fuzzing" -s --cov=src -n auto
+
+        - name: Run Tests
+          run: pytest tests/integration -m "not fuzzing" -s --cov=src -n auto
