--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -50,4 +50,4 @@ jobs:
             pip install .[test]
 
         - name: Run Tests
-          run: pytest -m "not fuzzing" -s --cov=src -n auto
+          run: pytest -m "not fuzzing" -s --cov=src -n auto --dist loadscope
