--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,57 +3,13 @@ on: ["push", "pull_request"]
 name: Test
 
 jobs:
-    linting:
-        runs-on: ubuntu-latest
-
-        steps:
-        - uses: actions/checkout@v2
-
-        - name: Setup Python
-          uses: actions/setup-python@v2
-          with:
-              python-version: 3.8
-
-        - name: Install Dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install .[lint]
-
-        - name: Run Black
-          run: black --check .
-
-        - name: Run isort
-          run: isort --check-only .
-
-        - name: Run flake8
-          run: flake8 .
-
-    type-check:
-        runs-on: ubuntu-latest
-
-        steps:
-        - uses: actions/checkout@v2
-
-        - name: Setup Python
-          uses: actions/setup-python@v2
-          with:
-              python-version: 3.8
-
-        - name: Install Dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install .[lint,test]
-
-        - name: Run MyPy
-          run: mypy .
-
     functional:
         runs-on: ${{ matrix.os }}
 
         strategy:
             matrix:
-                os: [ubuntu-latest, macos-latest]   # eventually add `windows-latest`
-                python-version: [3.8, 3.9, "3.10"]
+                os: [ubuntu-latest]   # eventually add `windows-latest`
+                python-version: [3.9]
 
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -94,26 +50,4 @@ jobs:
             pip install .[test]
 
         - name: Run Tests
-          run: pytest -m "not fuzzing" -s --cov=src -n auto --dist loadscope
-
-    fuzzing:
-        runs-on: ubuntu-latest
-
-        strategy:
-            fail-fast: true
-
-        steps:
-        - uses: actions/checkout@v2
-
-        - name: Setup Python
-          uses: actions/setup-python@v2
-          with:
-              python-version: 3.8
-
-        - name: Install Dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install .[test]
-
-        - name: Run Tests
-          run: pytest -m "fuzzing" --no-cov -s
+          run: pytest tests/integration/cli/test_test.py -m "not fuzzing" -s --cov=src -n auto --dist loadscope
